@@ -1,3 +1,7 @@
+2011-02-18  Xavier Perseguers  <xavier@causal.ch>
+
+	* Included confederation-level services
+
 2011-02-15  Xavier Perseguers  <xavier@causal.ch>
 
 	* Raised version to 0.7.0
